--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,8 @@
   </div>
 
   <div data-navbar-target="data" class="d-none">
-    <%= render "data_panel" %>
+    <div data-navbar-target="data1" class=""><%= render "data_panel" %></div>
+    <div data-navbar-target="data2" class="d-none"><%= render "data_panel_2" %></div>
   </div>
 
    <div data-navbar-target="param" class="d-none">
