--- a/app/assets/stylesheets/components/_data.scss
+++ b/app/assets/stylesheets/components/_data.scss
@@ -1,8 +1,50 @@
-.data-panel-title {
-  color: $purple;
-
+.data-panel-today {
+  color: grey;
+  margin: 2rem;
 }
 
-.data-panel-title .timer {
-  color: $darkpurple;
+.data-panel-congrats {
+  margin-top: 3.5rem;
+  margin: 3rem;
+  color: $orange;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.data-panel-footer {
+  color: grey;
+  text-align: center;
+  h3 {
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+  }
+  &:hover {
+  color: #858AE3;
+  }
+}
+
+.timer-total {
+  border-radius: 2rem;
+  background-color: $purple;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  text-align: center;
+  margin: 1rem;
+  padding: 1.5rem;
+  h2 {
+    margin: 0px;
+    font-size: 32px;
+    color: white;
+  }
+  p {
+    color: white;
+  }
+}
+
+.data-panel-timer {
+  align-items: center;
+  h3 {
+    color: #858AE3;
+    margin-bottom: 3rem;
+  }
 }
