--- a/app/views/users/_data_panel.html.erb
+++ b/app/views/users/_data_panel.html.erb
@@ -1,13 +1,25 @@
 <div class="panel" >
-  <div class="data-panel-title">
-    <h2>Today,</h2>
-    <br>
-    <h3>You worked ... </h3>
-    <br>
-    <div class="d-flex justify-content-center">
-      <div class="timer"><h2>07:37</h2><p>&ensp;55</p></div>
+  <div class="data-panel">
+
+    <div class="data-panel-today">
+      <h1>Today,</h1>
     </div>
-    <br>
-    <h3 class="text-center">Congratulations!</h3>
+
+    <div class= "data-panel-timer">
+      <h3>You worked ... </h3>
+      <div class="timer-total"><h2>07 hours 37 minutes</h2></div>
+    </div>
+
+    <div class="data-panel-congrats">
+      <h2 class="text-center">Congratulations!</h2>
+      <button class="btn happy-btn" style='align-items: center;'>Happy dance</button>
+
+    </div>
+
+    <div class="data-panel-footer">
+      <h3>Want to know more ?</h3>
+      <button class="btn data-btn" style='align-items: center;' data-action="click->navbar#displayDataTwo">Yessssss</button>
+    </div>
+
   </div>
 </div>
