--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,10 +27,14 @@
     <%= render "param_panel" %>
   </div>
 
+  <div class="" >
+     <%= render "needs_panel" %>
+  </div>
+
 </div>
 
-<div 
-    data-controller="game" 
+<div
+    data-controller="game"
     data-game-tiles-value=<%= asset_path("tiles.png") %>
     data-game-tiles-config-value=<%= asset_path("tiles.atlas") %>
     data-game-items-value=<%= asset_path("items.png") %>
