--- a/app/views/users/_needs_panel.html.erb
+++ b/app/views/users/_needs_panel.html.erb
@@ -9,35 +9,35 @@
     <div class="need-hunger">
       <i class="fa-solid fa-utensils"></i>
       <div class="myProgress">
-        <div class="myBar"></div>
+        <div id="hunger"></div>
       </div>
     </div>
 
      <div class="need-thirst">
       <i class="fa-solid fa-bottle-water"></i>
       <div class="myProgress">
-        <div class="myBar"></div>
+        <div id="thirst"></div>
       </div>
     </div>
 
      <div class="need-bathroom">
       <i class="fa-solid fa-shower"></i>
       <div class="myProgress">
-        <div class="myBar"></div>
+        <div id="bathroom "></div>
       </div>
     </div>
 
      <div class="need-rest">
       <i class="fa-solid fa-bed"></i>
       <div class="myProgress">
-        <div class="myBar"></div>
+        <div id="rest"></div>
       </div>
     </div>
 
      <div class="need-recreation">
       <i class="fa-solid fa-icons"></i>
       <div class="myProgress">
-        <div class="myBar"></div>
+        <div id="recreation"></div>
       </div>
     </div>
 
