finished label / data back end logic + front end

--- a/app/views/users/_data_panel.html.erb
+++ b/app/views/users/_data_panel.html.erb
@@ -7,7 +7,7 @@
 
     <div class= "data-panel-timer">
       <h3>You worked ... </h3>
-      <div class="timer-total"><h2>07 hours 37 minutes</h2></div>
+      <div class="timer-total"><h2 data-manage-data-target="dailytotal">0 hours 0 minutes</h2></div>
     </div>
 
     <div class="data-panel-congrats">
@@ -17,7 +17,7 @@
     </div>
 
     <div class="data-panel-footer">
-      <h3>Want to know more ?</h3>
+      <h3>Want to see details per label?</h3>
       <button class="btn data-btn" style='align-items: center;' data-action="click->navbar#displayDataTwo">Yessssss</button>
     </div>
 
