--- a/app/views/users/_navbar.html.erb
+++ b/app/views/users/_navbar.html.erb
@@ -9,7 +9,7 @@
     <a href="" class="fa-solid fa-music" data-action="click->navbar#displayMusic"></a>
   </div>
   <div class="icon-stat" data-navbar-target="databtn">
-    <a href="" class="fa-solid fa-chart-line" data-action="click->navbar#displayData"></a>
+    <a href="" class="fa-solid fa-chart-line" data-action="click->navbar#displayData click->manage-data#displayData"></a>
   </div>
   <div class="icon-param" data-navbar-target="parambtn">
     <a href="" class="fa-solid fa-gear" data-action="click->navbar#displayParam"></a>
