--- a/app/assets/stylesheets/components/_data.scss
+++ b/app/assets/stylesheets/components/_data.scss
@@ -48,3 +48,53 @@
     margin-bottom: 3rem;
   }
 }
+
+
+.label-times-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.label-times-card {
+  width: 75%;
+  border: 3px solid $purple;
+  border-radius: 30px;
+  margin-bottom: 1.2rem;
+  h4 {
+    margin-top: 0.5rem;
+    color: $purple;
+    text-align: center;
+  }
+  p {
+    margin-bottom: 0.3rem;
+    opacity: 0.7;
+  }
+}
+
+.label-times-card-times {
+display: flex;
+justify-content: space-evenly;
+h6 {
+  color:$pink;
+}
+}
+
+.label-times-card-times-specific {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  }
+
+  .data-panel2 {
+    overflow-y: scroll;
+    overscroll-behavior-block: contain;
+  }
+
+  .data-panel-happydance {
+    color: $orange;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
