--- a/app/views/users/_data_panel_2.html.erb
+++ b/app/views/users/_data_panel_2.html.erb
@@ -1,15 +1,41 @@
-<div class="panel" >
+<div class="panel data-panel2" >
   <div class="data-panel">
 
     <div class="data-panel-today">
-      <h1>Today's stats</h1>
     </div>
 
-     <div class="data-panel-today">
-      <h1>This week's stats</h1>
+  <%# <div class="label-times-list">
+    <div class="label-times-card">
+      <h4> test label</h4>
+      <div class="label-times-card-times">
+        <div class="label-times-card-times-specific">
+          <h6>Today</h6>
+          <p>03h34</p>
+        </div>
+        <div class="label-times-card-times-specific">
+          <h6>Total</h6>
+          <p>103h34</p>
+        </div>
+      </div>
+    </div>
+     <div class="label-times-card">
+      <h4> second test label</h4>
+      <div class="label-times-card-times">
+        <div class="label-times-card-times-specific">
+          <h6>Today</h6>
+          <p>03h34</p>
+        </div>
+        <div class="label-times-card-times-specific">
+          <h6>Total</h6>
+          <p>103h34</p>
+        </div>
+    </div>
+  </div> %>
+
+    <div class="label-times-list" data-manage-data-target="labeltimes">
     </div>
 
-    <div class="data-panel-congrats">
+    <div class="data-panel-happydance">
       <button class="btn happy-btn" style='align-items: center;'>Happy dance</button>
     </div>
 
