--- a/app/views/users/_needs_panel.html.erb
+++ b/app/views/users/_needs_panel.html.erb
@@ -1,8 +1,5 @@
 <div class="needs-panel" >
 
-  <div class="needs-title">
-    <h3><%= current_user.avatar.name %> is ...</h3>
-  </div>
 
   <div class="needs-variables">
 
@@ -14,8 +11,8 @@
     </div>
 
      <div class="need-thirst">
-      <i class="fa-solid fa-bottle-water"></i>
-      <div class="myProgress">
+        <i class="fa-solid fa-glass-water"></i>
+        <div class="myProgress">
         <div class="myBar" id="thirst"></div>
       </div>
     </div>
@@ -28,8 +25,8 @@
     </div>
 
      <div class="need-rest">
-      <i class="fa-solid fa-bed"></i>
-      <div class="myProgress">
+        <i class="fa-solid fa-moon"></i>
+        <div class="myProgress">
         <div class="myBar" id="rest"></div>
       </div>
     </div>
