some changed to labels and clean up seed

--- a/app/views/users/_new_label.erb
+++ b/app/views/users/_new_label.erb
@@ -1,7 +1,7 @@
 <div>
    <%= simple_form_for [current_user, @label], html: { data: {manage_labels_target: "newlabelform", action: "submit->manage-labels#create" }} do |f| %>
       <div class="mt-0">
-      <%= f.input :name, label: false, placeholder: 'type your new label name' %>
+      <%= f.input :name, label: false, placeholder: 'Type your label name' %>
       <div class="d-flex justify-content-center"><%= f.submit "+", class:"btn small-btn-blue create-btn" %></div>
       </div>
     <% end %>
