--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,11 @@
     <%= favicon_link_tag asset_path('favicon-96x96.png') %>
     <%= favicon_link_tag asset_path('favicon-16x16.png') %>
 
+    <%# og:image %>
+    <meta property="og:title" content="Virtual Work Buddy" />
+    <meta property="og:url" content="http://www.virtual-work-buddy.fun/" />
+    <meta property="og:image" content="images/ogimage.png" />
+
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
