--- a/app/views/users/_data_panel.html.erb
+++ b/app/views/users/_data_panel.html.erb
@@ -12,7 +12,7 @@
 
     <div class="data-panel-congrats">
       <h2 class="text-center">Congratulations!</h2>
-      <button class="btn happy-btn" style='align-items: center;' data-action="click->manage-data#startInteraction">Happy dance</button>
+      <button class="btn happy-btn" style='align-items: center;' data-action="click->manage-data#startInteraction"><i class="fa-solid fa-hands-clapping"></i></button>
 
     </div>
 
