--- a/app/views/users/_data_panel_2.html.erb
+++ b/app/views/users/_data_panel_2.html.erb
@@ -1,14 +1,11 @@
 <div class="panel data-panel2" >
   <div class="data-panel">
 
-    <div class="data-panel-today">
-    </div>
-
     <div class="label-times-list" data-manage-data-target="labeltimes">
     </div>
 
     <div class="data-panel-happydance">
-      <button class="btn happy-btn" style='align-items: center;'>Happy dance</button>
+      <button class="btn happy-btn" style='align-items: center;'><i class="fa-solid fa-hands-clapping"></i></button>
     </div>
 
   </div>
