--- a/app/assets/stylesheets/components/_data.scss
+++ b/app/assets/stylesheets/components/_data.scss
@@ -1,6 +1,9 @@
 .data-panel-today {
-  color: grey;
-  margin: 2rem;
+  color: $darkpurple;
+  opacity: 0.7;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+
 }
 
 .data-panel-congrats {
@@ -58,17 +61,24 @@
 
 .label-times-card {
   width: 75%;
-  border: 3px solid $purple;
+  border: 4px solid $purple;
   border-radius: 30px;
   margin-bottom: 1.2rem;
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
   h4 {
     margin-top: 0.5rem;
-    color: $purple;
+    color: $darkpurple;
+    opacity: 0.7;
     text-align: center;
+    font-style: italic;
+    font-size: 1.5rem;
+
   }
   p {
     margin-bottom: 0.3rem;
     opacity: 0.7;
+    font-size: 2rem;
   }
 }
 
@@ -76,7 +86,8 @@
 display: flex;
 justify-content: space-evenly;
 h6 {
-  color:$pink;
+  color:$purple;
+  font-size: 1rem;
 }
 }
 
