added btn borders

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -18,7 +18,8 @@
   padding-right: 1.2rem;
   background-color: $blue;
   color: white;
-  border: $blue;
+  border: 4px solid $blue;
+
 }
 
 .small-btn-outline-blue {
