--- a/app/views/users/_timer_panel.html.erb
+++ b/app/views/users/_timer_panel.html.erb
@@ -1,4 +1,4 @@
-<div class="panel" data-controller="update-timer manage-labels" data-update-timer-label-value=<%= @timer.label %> data-update-timer-logged-value=<%= @timer.logged %> data-update-timer-time-value=<%= @timer.total_time %> data-update-timer-id-value= <%= timer.id %> >
+<div class="panel" data-controller="manage-labels" >
   <h2 class="purple-timer-title">Timer</h2>
   <div class="timer-panel">
     <div class="timer"><h2 data-update-timer-target="hours">00</h2>:<h2 data-update-timer-target="minutes">00</h2>&ensp;<p data-update-timer-target="seconds">00</p></div>
