--- a/app/views/users/_card_task.html.erb
+++ b/app/views/users/_card_task.html.erb
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="buttons" >
-      <button class="btn btn-outline-warning edit-btn mx-1" data-action='click->edit-task#toggleElement'>Edit</button>
+      <button class="btn btn-outline-warning edit-btn my-1" data-action='click->edit-task#toggleElement'>Edit</button>
       <button class="btn btn-outline-warning delete-btn" data-action='click->create-task#destroy' id=<%= task.id %> >Delete</button>
     </div>
   </div>
