--- a/app/assets/stylesheets/components/_panel.scss
+++ b/app/assets/stylesheets/components/_panel.scss
@@ -2,8 +2,8 @@
   background-color: $beige;
   color: $darkpurple;
   border-radius: 30px;
-  height: 750px;
-  width: 500px;
+  height: 39rem;
+  width: 28rem;
   margin: 20px;
   padding: 20px;
 }
@@ -20,9 +20,9 @@
   color: $darkpurple;
   border-radius: 30px;
   height: fit-content;
-  width: 340px;
-  margin: 20px;
-  padding: 20px;
+  width: 16.5rem;
+  margin: 18px;
+  padding: 14px;
   position: absolute;
   bottom: 0rem;
   right: 0rem;
