--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -72,14 +72,13 @@
 }
 
 .welcome-panel-card {
-  margin-top: 7px;
-  margin: 3rem;
-  height: 120px;
+  margin-top: 3rem;
+  margin: 1rem;
+  height: 8rem;
   background: $orange;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   padding: 3px;
   display: flex;
   align-items: center;
   border-radius: 1.5rem;
-
 }
