--- a/app/views/users/_music_panel.html.erb
+++ b/app/views/users/_music_panel.html.erb
@@ -19,22 +19,22 @@
       <form data-action='submit->music-panel#launch'>
         <fieldset>
           <h5 style="color: #FF8FAB; margin-bottom:1em;">Youtube</h5>
-          <input class="input-field-url-music" type="url" name="url" style="width:350px" placeholder="https://youtu.be/hShxsAlJmfw" data-music-panel-target="input" >
+          <input class="input-field-url-music" type="url" name="url" style="width:20rem" placeholder="https://youtu.be/hShxsAlJmfw" data-music-panel-target="input" >
           <input class="btn btn-submit" type="submit" value="Play">
         </fieldset>
       </form>
     </div>
 
     <div class="card-youtube">
-      <iframe class="screen-youtube" width="460" height="250" src="https://www.youtube.com/embed/_4kHxtiuML0" title="Work From Home - chiLL Mix Playlist" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen data-music-panel-target="iframe" ></iframe>
+      <iframe class="screen-youtube" src="https://www.youtube.com/embed/_4kHxtiuML0" title="Work From Home - chiLL Mix Playlist" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen data-music-panel-target="iframe" ></iframe>
     </div>
   </div>
 
-  <div class="card-spotify my-5">
+  <%# <div class="card-spotify my-5">
     <h5 style="color: #FF8FAB;">Spotify</h5>
     <div class="card-spotify m-4">
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E4CgUVQF0DGB1?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
-  </div>
+  </div> %>
 
 </div>
