--- a/app/assets/stylesheets/components/_task.scss
+++ b/app/assets/stylesheets/components/_task.scss
@@ -12,6 +12,13 @@
   }
 }
 
+.container-task {
+  h2 {
+    font-family: "Gaegu", "cursive";
+    font-size: 4rem;
+    text-align: center;
+  }
+}
 
 .card-task h2 {
   font-size: 16px;
