--- a/app/views/users/_music_panel.html.erb
+++ b/app/views/users/_music_panel.html.erb
@@ -1,7 +1,7 @@
 <div class="panel">
 
   <div class="music-panel-title">
-    <h2>Playlists</h2>
+    <h2>Music</h2>
   </div>
 
   <%# <div class="music-panel-input">
@@ -18,7 +18,7 @@
     <div class="input-field-music">
       <form data-action='submit->music-panel#launch'>
         <fieldset>
-          <h5 style="color: #FF8FAB; margin-bottom:1em;">Youtube</h5>
+          <h5 style="color: #FF8FAB; margin-bottom:1em;"></h5>
           <input class="input-field-url-music" type="url" name="url" style="width:20rem" placeholder="https://youtu.be/hShxsAlJmfw" data-music-panel-target="input" >
           <input class="btn btn-submit" type="submit" value="Play">
         </fieldset>
