--- a/app/views/users/_task_list.html.erb
+++ b/app/views/users/_task_list.html.erb
@@ -1,5 +1,5 @@
  <div class="container-task" data-create-task-target="list">
-  <h2 style='color: #FFA62B'>To Do List</h2>
+  <h2 style='color: #FFA62B'>To do</h2>
     <% if tasks.empty?  %>
       <div class="no-tasks"><h4>No task to do yet !</h4></div>
     <% else %>
