--- a/app/views/users/_welcome_panel.html.erb
+++ b/app/views/users/_welcome_panel.html.erb
@@ -1,9 +1,9 @@
 <div class="panel">
 
    <div class="welcome-panel-title m-3">
-    <h1 style='color: #0F0326ab; text-align: center; padding-top: 30px;'>Welcome back <span style='color: #858AE3;'><%= current_user.username %></span>, </h1>
+    <h1 style='color: #0F0326ab; text-align: center; padding-top: 20px;'>Welcome back <span style='color: #858AE3; font-family: "Gaegu", "cursive"; font-size: 4rem;'><%= current_user.username %></span>, </h1>
     <br>
-    <h3 style='color: #0F0326ab; text-align: center; padding-top: 20px; padding-bottom: 20px;'>Your virtual work buddy <span style='color: #75C9C8;'><%= current_user.avatar.name %></span> is super happy to see you!</h3>
+    <h3 style='color: #0F0326ab; text-align: center; padding-top: 10px; padding-bottom: 18px;'>Your virtual work buddy <span style='color: #75C9C8; font-family: "Gaegu", "cursive"; font-size: 2.5rem;'><%= current_user.avatar.name %></span> is super happy to see you!</h3>
   </div>
 
   <div class="welcome-panel-card">
