--- a/app/assets/stylesheets/components/_music.scss
+++ b/app/assets/stylesheets/components/_music.scss
@@ -35,9 +35,15 @@
   margin: 0.625rem;
   }
 
-  .music-panel-title{
-    color: $pink;
-  }
+.music-panel-title{
+  color: $pink;
+  h2{
+  font-family: "Gaegu", "cursive";
+  font-size: 4rem;
+  text-align: center;
+}
+}
+
 .screen-youtube {
   width: 25.5rem;
   height: 15rem;
