--- a/app/assets/stylesheets/components/_timers.scss
+++ b/app/assets/stylesheets/components/_timers.scss
@@ -77,6 +77,9 @@
 
 .purple-timer-title {
   color: $blue;
+  font-family: "Gaegu", "cursive";
+  font-size: 4rem;
+  text-align: center;
 }
 
 #timer_label_id {
