--- a/app/assets/stylesheets/components/_timers.scss
+++ b/app/assets/stylesheets/components/_timers.scss
@@ -98,23 +98,52 @@
 
 
 .homepage-timer {
+  color: $darkpurple;
   position: absolute;
   right: 0rem;
   margin-right: 1.15rem;
-  margin-top: 0.625rem;
+  margin-top: 1rem;
   border-radius: 50px;
-  background-color: $purple;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  background-color: $blue;
   text-align: center;
-  width: 12.5rem;
-  opacity: 0.7;
+  width: 10rem;
+  opacity: 0.8;
   padding: 0.625rem;
-  padding-bottom: 0.5rem;
+  padding-bottom: 0.7rem;
   display: flex;
   justify-content: center;
+  text-align: center;
+  box-sizing: border-box;
+  width     : 7rem;
+  height    : 6.2rem;
+  padding   : 3rem 0em 0 1em;
+  margin    : 0 4rem;
+  border-radius: 100% 100% 0 0;
   h2 {
     align-items: center;
-    margin: 0px;
     font-size: 32px;
   }
+}
+  .homepage-timer::before,
+  .homepage-timer::after {
+  content: '';
+  position: absolute;
+  bottom  : 0;
+  z-index : -1;
+  background-color: $blue;
+  border-radius: 100%;
+}
+
+.homepage-timer::before {
+  width  : 4.9rem;
+  height : 4.7rem;
+  left    : -3rem;
+  border-bottom-right-radius: 0;
+}
+
+.homepage-timer::after {
+  width  : 4.3rem;
+  height : 4.2rem;
+  right   : -2.5rem;
+  border-bottom-left-radius: 0;
 }
