changed the data design

--- a/app/views/users/_data_panel.html.erb
+++ b/app/views/users/_data_panel.html.erb
@@ -11,7 +11,7 @@
     </div>
 
     <div class="data-panel-congrats">
-      <h2 class="text-center">Congratulations!</h2>
+      <h2 class="text-center">Congratulations <span style='color: #FFA62B; font-family: "Gaegu", "cursive"; font-size: 3rem;'><%= current_user.username %></span>! </h2>
       <button class="btn happy-btn" style='align-items: center;' data-action="click->manage-data#startInteraction"><i class="fa-solid fa-hands-clapping"></i></button>
 
     </div>
