--- a/app/assets/stylesheets/components/_data.scss
+++ b/app/assets/stylesheets/components/_data.scss
@@ -7,9 +7,10 @@
 }
 
 .data-panel-congrats {
-  margin-top: 3rem;
-  margin: 2.5rem;
-  color: $orange;
+  margin-top: 2rem;
+  margin: 1.8rem;
+  color: $darkpurple;
+  opacity: 0.7;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,7 +20,7 @@
   color: grey;
   text-align: center;
   h4 {
-  margin-top: 2rem;
+  margin-top: 0.2rem;
   margin-bottom: 1rem;
   }
   &:hover {
@@ -32,10 +33,9 @@
   background-color: $purple;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
   text-align: center;
-  margin: 1rem;
-  padding: 1.5rem;
+  margin: 0.8rem;
+  padding: 1.1rem;
   h2 {
-    margin: 0px;
     font-size: 32px;
     color: white;
   }
@@ -47,8 +47,9 @@
 .data-panel-timer {
   align-items: center;
   h3 {
-    color: #858AE3;
-    margin-bottom: 2rem;
+    color: $darkpurple;
+    opacity: 0.7;
+    margin-bottom: 1rem;
   }
 }
 
