--- a/app/views/users/_new_label.erb
+++ b/app/views/users/_new_label.erb
@@ -2,7 +2,7 @@
    <%= simple_form_for [current_user, @label], html: { data: {manage_labels_target: "newlabelform", action: "submit->manage-labels#create" }} do |f| %>
       <div class="mt-0">
       <%= f.input :name, label: false, placeholder: 'Type your label name' %>
-      <div class="d-flex justify-content-center"><%= f.submit "+", class:"btn small-btn-blue create-btn" %></div>
+      <div class="d-flex justify-content-center"><%= f.submit "+", class:"btn small-btn-blue-label create-btn" %></div>
       </div>
     <% end %>
 </div>
