--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -18,7 +18,6 @@
   background-color: $blue;
   color: white;
   border: 4px solid $blue;
-
 }
 
 .small-btn-outline-blue {
@@ -201,4 +200,14 @@ a {
       color: $beige;
     }
   }
+}
+
+.small-btn-blue-label {
+  font-size: 1rem;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
+  padding-top: 0.2rem;
+  background-color: $blue;
+  color: white;
+  border: 4px solid $blue;
 }
