--- a/app/views/users/_music_panel.html.erb
+++ b/app/views/users/_music_panel.html.erb
@@ -25,8 +25,8 @@
       </form>
     </div>
 
-    <div class="card-youtube">
-      <iframe class="screen-youtube" src="https://www.youtube.com/embed/_4kHxtiuML0" title="Work From Home - chiLL Mix Playlist" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen data-music-panel-target="iframe" ></iframe>
+    <div class="card-youtube" data-action='click->music-panel#play'>
+      <iframe class="screen-youtube" src="https://www.youtube.com/embed/_4kHxtiuML0" title="Work From Home - chiLL Mix Playlist" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen data-music-panel-target="iframe"></iframe>
     </div>
   </div>
 
