--- a/app/assets/stylesheets/components/_timers.scss
+++ b/app/assets/stylesheets/components/_timers.scss
@@ -7,12 +7,13 @@
   margin: 0.625rem;
   opacity: 0.7;
   padding: 0.625rem;
-  padding-bottom: 0.5rem;
   display: flex;
   justify-content: center;
+  padding-top: 0.8rem;
   h2 {
     align-items: center;
     font-size: 32px;
+    margin: 0px;
   }
 }
 
