dance interaction on second button

--- a/app/views/users/_data_panel_2.html.erb
+++ b/app/views/users/_data_panel_2.html.erb
@@ -5,7 +5,9 @@
     </div>
 
     <div class="data-panel-happydance">
-      <button class="btn happy-btn" style='align-items: center;'><i class="fa-solid fa-hands-clapping"></i></button>
+      <button class="btn happy-btn" style='align-items: center;' data-action="click->manage-data#startInteraction">
+        <i class="fa-solid fa-hands-clapping"></i>
+      </button>
     </div>
 
   </div>
