--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= meta_title %></title>
-    <meta name="description" content="<%= meta_description %>">
+    <title>Virtual Work Buddy - make homeoffice a happier place</title>
     <%# favicon_link_tag %>
     <%= favicon_link_tag asset_path('favicon-32x32.png') %>
     <%= favicon_link_tag asset_path('favicon-96x96.png') %>
     <%= favicon_link_tag asset_path('favicon-16x16.png') %>
 
     <%# og:image %>
+    <meta property="og:title" content="Virtual Work Buddy" />
+    <meta property="og:url" content="http://www.virtual-work-buddy.fun/" />
+    <meta property="og:image" content="images/ogimage.png" />
 
-
-    <!-- Facebook Open Graph data -->
-    <meta property="og:title" content="<%= meta_title %>" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="<%= request.original_url %>" />
-    <meta property="og:image" content="<%= meta_image %>" />
-    <meta property="og:description" content="<%= meta_description %>" />
-    <meta property="og:site_name" content="<%= meta_title %>" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csrf_meta_tags %>
