changed meta page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,8 @@
+<!-- app/views/offers/show.html.erb -->
+<% content_for :meta_title, "You are on #{DEFAULT_META["meta_product_name"]}" %>
+<% content_for :meta_description, 'Welcome to Virtual Work Buddy' %>
+<% content_for :meta_image, asset_path('ogimage.png') %>
+
 <div class="homepage-container" style="background-color: #FFEEDD;">
 
   <div class="banner">
