--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -2,7 +2,7 @@
   font-size: 1.3rem;
   padding-left: 2rem;
   padding-right: 2rem;
-  background-color: #75C9C8;
+  background-color: $blue;
   color: white;
   border: 4px solid $blue;
   &:hover {
@@ -36,6 +36,18 @@
   margin-right: 1rem;
   color: $pink;
   border: solid 4px $pink;
+  &:hover {
+    color: #FFEEDD;
+  }
+}
+
+.btn-transparent-blue {
+  font-size: 1.3rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin-right: 1rem;
+  color: $blue;
+  border: solid 4px $blue;
   &:hover {
     color: #FFEEDD;
   }
