--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,18 +7,22 @@
 
 .card-category {
   background-size: cover;
-  background-position: center;
   height: 20rem;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
   color: antiquewhite;
-  font-size: 1.5em;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 7px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   h4 {
-    padding: 3rem;
+    font-size: 1.5em;
+    padding: 2rem;
+  }
+  .fa-solid {
+  color: $beige;
+  font-size: 4rem;
+  padding-top: 3rem;
   }
 }
 
