--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -97,17 +97,15 @@ a {
 
 .btn-plus {
   text-decoration: none;
-  font-size: 1.5rem;
-  color: #ffffff;
-  background-color: #858AE3;
+  font-size: 3.5rem;
+  color: $purple;
   border-radius: 50%;
-  padding: 0.3em 1em 0.4em 1em;
+  padding: 0.4em 1em;
   margin-bottom: center;
   height: 65px;
-  line-height: 2.7rem;
   cursor: pointer;
     &:hover {
-    color: $beige;
+    color: $orange;
   }
 }
 
@@ -154,10 +152,9 @@ a {
     color: $beige;
     background-color: #858AE3;
     border-radius: 20px;
-    padding: 0.4em 1em 0.5em 1em;
+    padding: 0.5em 1em 0.5em 1em;
     margin-bottom: center;
     height: 65px;
-    line-height: 2.7rem;
     cursor: pointer;
     border: solid 4px $purple;
       &:hover {
