--- a/app/views/users/_new_label.erb
+++ b/app/views/users/_new_label.erb
@@ -7,4 +7,4 @@
     <% end %>
 </div>
 <%# ADD CONFIRMATION WHEN LABEL IS CREATED %>
-<div data-manage-labels-target="creationconfirmation" class="d-none mt-2 text-primary">Your label has been created! <br>You can assign it to a timer</div>
+<div data-manage-labels-target="creationconfirmation" class="d-none text-primary label-text">Your label has been created !</div>
