--- a/app/views/users/_timer_panel_buttons.html.erb
+++ b/app/views/users/_timer_panel_buttons.html.erb
@@ -14,7 +14,7 @@
   <br>
   <p class="mt-4 mb-3 text-danger text-center">Create a new label</p>
   <div><%= render "new_label", timer: timer %></div>
-  <br><div class="text-center text-info" data-update-timer-target="logconfirmation"></div>
+  <div class="text-center text-primary" data-update-timer-target="logconfirmation"></div>
 
 </div>
 
